* February 25, 2004
- Dan Fandrich found a flaw in the Feb 22 fix.

* February 23, 2004
- Removed ares_free_errmem(), the function, the file and the man page. It was
  not used and it did nothing.

- Fixed a lot of code that wasn't "64bit clean" and thus caused a lot of
  compiler warnings on picky compilers.

* February 22, 2004
- Dominick Meglio made ares init support multiple name servers in the
  NameServer key on Windows.

* February 16, 2004
- Modified ares_private.h to include libcurl's memory debug header if
  CURLDEBUG is set. This makes all the ares-functions supervised properly by
  the curl test suite. This also forced me to add inclusion of the
  ares_private.h header in a few more files that are using some kind of
  memory-related resources.

- Made the makefile only build ahost and adig if 'make demos' is used.

* February 10, 2004
- Dirk Manske made ares_version.h installed with 'make install'

* February 4, 2004
- ares_free_errmem() is subject for removal, it is simply present for future
  purposes, and since we removed the extra parameter in strerror() it won't
  be used by c-ares!
- configure --enable-debug now enables picky compiler options if gcc is used
- fixed several compiler warnings --enable-debug showed and Joerg Mueller-Tolk
  reported

Version 1.0.0 (February 3, 2004)

* February 3, 2004
- now we produce the libcares.a library instead of the previous libares.a
  since we are no longer compatible

* February 2, 2004

- ares_strerror() has one argument less. This is the first official
  modification of the existing provided ares API.

* January 29, 2004

- Dirk Manske fixed how the socket is set non-blocking.

* January 4, 2004

- Dominick Meglio made the private gettimeofday() become ares_gettimeofday()
  instead in order to not pollute the name space and risk colliding with
  other libraries' versions of this function.

* October 24, 2003. Daniel Stenberg

  Added ares_version().

Version 1.0-pre1 (8 October 2003)
