@@ -1,6 +1,9 @@
 * February 25, 2004
 - Dan Fandrich found a flaw in the Feb 22 fix.
 
+- Added better configure --enable-debug logic (taken from the curl configure
+  script). Added acinclude.m4 to the tarball.
+
 * February 23, 2004
 - Removed ares_free_errmem(), the function, the file and the man page. It was
   not used and it did nothing.
